--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
+    "@material-tailwind/react": "^1.2.4",
     "axios": "^0.27.2",
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
