--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.36.1"
+    "react-hook-form": "^7.36.1",
+    "sweetalert2": "^11.4.35",
+    "sweetalert2-react-content": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
