--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-icons": "^4.4.0",
     "sweetalert2": "^11.4.35",
     "sweetalert2-react-content": "^5.0.3"
   },
