--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.11.0",
     "@hookform/error-message": "^2.0.0",
     "@material-tailwind/react": "^1.2.4",
     "axios": "^0.27.2",
